bad/undefined_class_method_call.example_compiler_output
ERROR
[1mbad/undefined_class_method_call.lat:3:4: [1;31merror: [0;1mUnknown class: X[m
	((X)null).some_method();
	  [1;32m^[m
